communication with client is implemented

--- a/server.yaml
+++ b/server.yaml
@@ -1,11 +1,19 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: server
 spec:
-  containers:
-  - name: server
-    image: cherrygender/fast-api-server:0.0.1
-    resources:
-      limits:
-        memory: "200Mi"
+  replicas: 1
+  selector:
+    matchLabels:
+      app: server
+  template:
+    metadata:
+      labels:
+        app: server
+    spec:
+      containers:
+      - name: server
+        image: cherrygender/fast-api-server:0.0.1
+        ports:
+        - containerPort: 8000
